// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportFilter component - Editions should render initial state when a selectedEdition has been removed 1`] = `
<div>
   
  <section
    class="svelte-1n33o8p"
  >
    <div
      class="report-filter svelte-1n33o8p"
    >
      <div
        class="filter-selector svelte-1n33o8p"
        data-testid="display-modal-button"
      >
        <div
          class="icon-wrapper  svelte-1n33o8p"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          No filters applied
        </div>
      </div>
       
      <div
        class="filter-chips svelte-1n33o8p"
      />
    </div>
     
  </section>
</div>
`;

exports[`ReportFilter component - Editions should render the ReportFilter component with a selectedEdition 1`] = `
<div>
   
  <section
    class="svelte-1n33o8p"
  >
    <div
      class="report-filter svelte-1n33o8p"
    >
      <div
        class="filter-selector svelte-1n33o8p"
        data-testid="display-modal-button"
      >
        <div
          class="icon-wrapper active  svelte-1n33o8p"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          Event/edition
        </div>
      </div>
       
      <div
        class="filter-chips svelte-1n33o8p"
      >
        <div
          class=" clickable removeable svelte-qh5bld"
          data-testid="chip"
        >
          <span
            class="label svelte-qh5bld"
          >
            Test Event / Test Edition
          </span>
           
          <span
            class="cross svelte-qh5bld"
            data-testid="remove-chip-button"
          >
            <div
              class=" svelte-zpbvvv"
              style="--icon-width: 12px; --icon-height: 12px;"
            >
              <object
                src="ic-delete.svg/"
              />
            </div>
          </span>
        </div>
      </div>
    </div>
     
  </section>
</div>
`;
